small refactorings